(app): upgrade all deps, Studio title, form layout bug

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -224,6 +224,11 @@
     @apply rounded-3xl drop-shadow-sm;
   }
 
+  input,
+  textarea {
+    @apply bg-white;
+  }
+
   /* Typography */
 
   h1,
